@@ -1,5 +1,5 @@
 <% flash.each do |name, msg| %>
   <% if msg.is_a?(String) %>
-    <%= content_tag :div, msg, :id => "flash_#{name}" %>
+    <%= content_tag :div, msg, :class => "flash_#{name}" %>
   <% end %>
 <% end %>
