@@ -1,3 +1,3 @@
 - flash.each do |name, msg|
   - if msg.is_a?(String)
-    = content_tag :div, msg, :id => "flash_#{name}"
+    = content_tag :div, msg, :class => "flash_#{name}"
